--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -1,10 +1,10 @@
 
 <div class="cards-container">
     <div class="card" style="width: 18rem" *ngFor="let person of responseFromApi?._embedded?.notices">
-    <img src="{{ person._links.thumbnail.href }}" class="card-img-top" alt="person-image" />
+    <img src="{{ person._links.thumbnail?.href }}" class="card-img-top" alt="person-image" />
     <div class="card-body">
-      <h6 class="card-title">{{ person.name }}</h6>
-      <h6 class="card-title">{{ person.forename }}</h6>
+      <h6 class="card-title">{{ person?.name }}</h6>
+      <h6 class="card-title">{{ person?.forename }}</h6>
       <p class="card-text">
         {{ 2022 - (+person.date_of_birth.slice(0, 4)) }} Years Old
       </p>
