--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,10 +9,12 @@
 <body>
         <div class="container">
         <div class="main-form">
-            <app-form></app-form>
+                <!-- receive value from child component from form component -->
+            <app-form (formEvent) = "receiveValue($event)" ></app-form>
         </div>
 
         <div class="main-cards">
+                <!-- send data to child component -->
             <app-cards [responseFromApi] = "responseFromApi" ></app-cards>
         </div>
     </div>
