--- a/src/app/app-component/app.component.html
+++ b/src/app/app-component/app.component.html
@@ -18,6 +18,7 @@
             <app-cards [responseFromApi] = "responseFromApi" ></app-cards>
         </div>
     </div> -->
+    <app-navbar (msgEvent) = "receiveValue($event)"></app-navbar>
     <router-outlet></router-outlet>
 </body>
 </html>
