--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -7,65 +7,82 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- <app-navbar></app-navbar> -->
+
     <div class="container">
-        <h2>Identity Particulars</h2>
-        <section>
-            <div>
-                <p>Family Name :</p>
-                <p>{{ responseFromApi?.name }} </p>
+        <div class="detail-image-div">
+            <img src="../../assets/avatar.jpg" alt="detail-image">
+        </div>
+
+        <section class="detail-section-one">
+            <h3 translate>Identity Particulars</h3>
+            <div class="detail-section-one-inner">
+                <div>
+                <span translate>Lastname</span>
+                <p> : {{ responseFromApi?.name }} </p>
             </div>
             <div>
-                <p>Forename :</p>
-                <p>{{ responseFromApi?.forename }} </p>
+                <span translate>Firstname</span>
+                <p> : {{ responseFromApi?.forename }} </p>
             </div>
             <div>
-                <p>Gender :</p>
-                <p>{{ responseFromApi?.sex_id == "M" ? "Male" : (responseFromApi?.sex_id == "F" ? "Female" : "Unknown") }} </p>
+                <span translate>Gender</span>
+                <p> : {{ responseFromApi?.sex_id == "M" ? "Male" : (responseFromApi?.sex_id == "F" ? "Female" : "Unknown") }} </p>
             </div>
             <div>
-                <p>Date of Birth :</p>
-                <p>{{ responseFromApi?.date_of_birth }} ({{ 2022 - (+responseFromApi?.date_of_birth.slice(0, 4))}} Years Old) </p>
+                <span translate>Date of Birth</span>
+                <p> : {{ responseFromApi?.date_of_birth }} {{ 2022 - (+responseFromApi?.date_of_birth.slice(0, 4))}}  </p>
+                <p translate>Years Old</p>
             </div>
             <div>
-                <p>Place of Birth :</p>
-                <p>{{ responseFromApi?.place_of_birth }} </p>
+                <span translate>Place of Birth</span>
+                <p> : {{ responseFromApi?.place_of_birth ? responseFromApi?.place_of_birth : "Unknown" }} </p>
             </div>
             <div>
-                <p>Nationality :</p>
-                <p> {{ responseFromApi?.nationalities[0] }} </p>
+                <span translate>Nationality</span>
+                <p> : {{ responseFromApi?.nationalities[0] ? responseFromApi?.nationalities[0] : "Unknown" }} </p>
+            </div>
             </div>
         </section>
 
-        <section>
-            <h2>Physical Description</h2>
+        <section class="detail-section-two">
+            <h3 translate>Physical Description</h3>
             
-            <div>
-                <p>Colour of Hair</p>
-                <p> {{ responseFromApi?.hairs_id ? responseFromApi?.hairs_id : "Unknown" }} </p>
+            <div class="detail-section-two-inner">
+                <div>
+                <span translate>Colour of Hair</span>
+                <p translate> : {{ responseFromApi?.hairs_id ? responseFromApi?.hairs_id : "Unknown" }} </p>
             </div>
             <div>
-                <p>Colour of Eyes</p>
-                <p> {{ responseFromApi?.eyes_colors_id ? responseFromApi?.eyes_colors_id : "Unknown" }} </p>
+                <span translate>Colour of Eyes</span>
+                <p> : {{ responseFromApi?.eyes_colors_id ? responseFromApi?.eyes_colors_id : "Unknown" }} </p>
             </div>
-        </section>
-
-        <section>
-            <h2>Details</h2>
-            <div>
-                <p>Language(s) Spoken</p>
-                <p> {{ responseFromApi?.languages_spoken_ids }} </p>
             </div>
         </section>
 
-        <section>
-            <h2>Charges</h2>
-            <div>
-                <p> {{ responseFromApi?.arrest_warrants[0]["charge"] }} </p>
-                <p> {{ responseFromApi?.arrest_warrants[0]["charge_translation"] ? responseFromApi?.arrest_warrants[0]["charge_translation"] : "Unknown" }} </p>
+        <section class="detail-section-three">
+            <h3 translate>Details</h3>
+            <div class="detail-section-three-inner">
+                <div>
+                    <span translate>Language Spoken</span>
+                    <p> : {{ responseFromApi?.languages_spoken_ids ? responseFromApi?.languages_spoken_ids : "Unknown" }} </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="detail-section-four">
+            <h3 translate>Charges</h3>
+            <div class="detail-section-four-inner">
+                    <p> {{ responseFromApi?.arrest_warrants[0]["charge"] }} </p>
+                    <div>
+                        <span> Charge Translation -  </span>
+                    <span>{{ responseFromApi?.arrest_warrants[0]["charge_translation"] ? responseFromApi?.arrest_warrants[0]["charge_translation"] : "Unknown" }}</span>
+                    </div>
             </div>
         </section>
     </div>
+
+    <app-footer></app-footer>
 </body>
 </html>
 
