--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -1,5 +1,56 @@
 
+.form-container {
+    background-color: #eeeeee;
+    display: flex;
+    justify-content: center;
+    border-radius: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    outline: none;
+}
+
+.form-container h2 {
+    text-align: center;
+}
+
 .form {
-    background-color: beige;
-    
+    width: 80%;
+}
+
+.form-input {
+    width: 100%;
+    height: 2rem;
+    border-radius: 0.3rem;
+    border: none;
+}
+
+.age-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.age-container div  {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+
+.age-container div input {
+    width: 90%;
+    border: none;
+    border-radius: 0.3rem;
+    height: 2rem;
+}
+
+.form-button {
+    display: block;
+    width: 50%;
+    margin: auto;
+    text-align: center;
+    border: none;
+    background-color: rgb(8, 131, 255);
+    color: white;
+    height: 2rem;
+    border-radius: 0.3rem;
+
 }
