--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,7 +1,10 @@
-.container {
+.home-container {
+    width: 100%;
     display: flex;
+    justify-content: space-around;
     gap: 2rem;
     margin-top: 4rem;
+    /* background-color: bisque; */
 }
 
 .main-form {
@@ -9,6 +12,6 @@
 }
 
 .main-cards {
-    width: 80%;
+    width: 70%;
     display: flex;
 }
