--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -15,7 +15,7 @@
 
     <section>
       <div>
-        <h6 translate>CONNECT WITH US</h6>
+        <h6 translate id="footer-connect-header">CONNECT WITH US</h6>
       </div>
       <div>
         <p translate>Contect INTERPOL</p>
@@ -32,7 +32,7 @@
       <div>
         <p translate>News and Events</p>
         <p translate>Information for Journalists</p>
-        <p translate>Multimedia</p>
+        <p translate id="footer-multimedia">Multimedia</p>
         <p translate>Documents</p>
       </div>
     </section>
@@ -51,7 +51,7 @@
 
     <section>
       <div>
-        <h6 translate>SOCIAL MEDIA</h6>
+        <h6 translate id="footer-socialmedia">SOCIAL MEDIA</h6>
       </div>
 
       <div class="footer-icons-div">
