--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -4,54 +4,48 @@
     style="width: 18rem"
     *ngFor="let person of responseFromApi?._embedded?.notices"
   >
-    <!-- <div *ngIf="responseFromApi?.total != 0"> -->
-      <!-- <img
-        src="{{ person?._links?.thumbnail?.href }}"
-        class="card-img-top"
-        alt="person-image"
-      /> -->
-
-      <img
-        src="../../assets/avatar.jpg"
-        class="card-img-top"
-        alt="person-image"
-      />
-      <div class="card-body">
-        <h6 class="card-title">{{ person?.name }}</h6>
-        <h6 class="card-title">{{ person?.forename }}</h6>
-        <div>
-          <span translate class="card-text card-name">
-          {{ 2022 - +person.date_of_birth.slice(0, 4) }} 
-        </span> 
-        <span translate>Years Old</span>
-        </div>
-
-        <div>
-          <span translate>Country</span>
-          <span translate> :  {{ person?.nationalities ? person?.nationalities[0] : "Unknown"}}</span>
-        </div>
-        <!-- <p *ngFor="let item of countryListArray" > 
-             
-      </p> -->
-        <!-- <a routerLink="['/details', {person} ]" class="btn btn-primary">Go somewhere</a> -->
-        <a
-          class="card-detail-button"
-          [routerLink]="[
-            '/details',
-            person?.entity_id,
-            { state: person.entity_id }
-          ]"
-          >
-            <button translate>Go To Detail</button>
-          </a
-        >
-        <!-- <a routerLink="details/" [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active"></a> -->
-        <!-- <button class="btn btn-primary" (click)="goToDetails()">Go To Details</button> -->
+    <img
+      src="../../assets/avatar.jpg"
+      class="card-img-top"
+      alt="person-image"
+    />
+    <div class="card-body">
+      <h6 class="card-title">{{ person?.name }}</h6>
+      <h6 class="card-title">{{ person?.forename }}</h6>
+      <div>
+        <span translate class="card-text card-name">
+          {{ 2022 - +person.date_of_birth.slice(0, 4) }}
+        </span>
+        <span translate id="card-year-span">Years Old</span>
       </div>
-    </div>
 
-    <div *ngIf="responseFromApi?._embedded?.notices.length == 0">
-      <h1 translate >There are no results according to your search criteria</h1>
+      <div>
+        <span translate id="card-country-span" >Country</span>
+        <span translate>
+          :
+          {{
+            person?.nationalities ? person?.nationalities[0] : "Unknown"
+          }}</span
+        >
+      </div>
+
+      <a
+        class="card-detail-button"
+        [routerLink]="[
+          '/details',
+          person?.entity_id,
+          { state: person.entity_id }
+        ]"
+      >
+        <button translate class="but" >Go To Detail</button>
+      </a>
     </div>
-  <!-- </div> -->
+  </div>
+
+  <div
+    class="no-content-div"
+    *ngIf="responseFromApi?._embedded?.notices.length == 0"
+  >
+    <h1 translate>There are no results according to your search criteria</h1>
+  </div>
 </div>
