--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -9,6 +9,12 @@
       class="card-img-top"
       alt="person-image"
     />
+    <!-- <img
+      src="{{ person?._links?.thumbnail?.href }}"
+      class="card-img-top"
+      alt="person-image"
+    /> -->
+
     <div class="card-body">
       <h6 class="card-title">{{ person?.name }}</h6>
       <h6 class="card-title">{{ person?.forename }}</h6>
