--- a/src/app/app-component/app.component.html
+++ b/src/app/app-component/app.component.html
@@ -11,5 +11,6 @@
 
     <app-navbar (msgEvent) = "receiveValue($event)"></app-navbar>
     <router-outlet></router-outlet>
+    <app-footer></app-footer>
 </body>
 </html>
